[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/player.gd" type="Script" id=1]
[ext_resource path="res://scenes/player_bullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/player/player_spriteframes.tres" type="SpriteFrames" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 15.5

[sub_resource type="CircleShape2D" id=2]
radius = 19.0

[node name="player" type="KinematicBody2D" groups=["player"]]
collision_mask = 16
script = ExtResource( 1 )
speed = 500.0
bulletScene = ExtResource( 2 )
max_lives = 5

[node name="kinematic_colider" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 0 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="hit_box" type="Area2D" parent="." groups=["damageable"]]
collision_mask = 8
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="hit_box"]
shape = SubResource( 2 )

[node name="fire_point" type="Node2D" parent="."]
position = Vector2( 20, 1 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 3 )
animation = "walking"
frame = 4

[connection signal="area_entered" from="hit_box" to="." method="_on_hit_box_area_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
